frontend/src/index.scss
/* ... */
input[type=range] {
    width: calc(100% - 1px); // chrome116 on android shows a scrollbar because of that 1px
}
input[type=checkbox] {
    transform: scale(1.7);
    accent-color: var(--button-bg);
}
textarea { font-size: 14pt }
label input[type=checkbox] {
    margin-right: .8em;
}
select { text-align: center; } // it is surely cooler on the options dialog

.hidden { display: none !important }

[class^="fa-"]:before, [class*=" fa-"]:before { /* don't need extra margin on fontello icons */
    margin: 0;
}
.icon {
    font-size: 1.2em;
    height: 1.2em; width: 1.4em; // give similar size to <img> icons

    display: inline-block; text-align: center; // same size for font icons
}
img.file-icon { height: 1em; }
.file-icon {
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    vertical-align: text-bottom;
}

.icon.mirror:before { transform: scaleX(-1); }
a {
    text-decoration: none;
    color: var(--button-bg);
}
button {
    background-color: var(--button-bg);
    color: var(--button-text);
    padding: .5em;
    &:not(.before-sliding) { min-width: 2em; }
    &.small { padding: 0 0.4em; height: 30px; }
    .icon { position: relative; top: .05em; }
    border: transparent;
    text-decoration: none;
    border-radius: 0.3em;
    vertical-align: middle;
    cursor: pointer;
    &:hover { outline: 1px solid var(--mild-contrast); }
    transition: background-color .5s;
    &[disabled] {
        background-color: var(--faint-contrast);
    }
}
button.toggled {
    color: #fff;
    text-shadow: 0 0 3px #fff;
}
a.toggled {
    color: #223;
    text-shadow: 0 0 5px #223;
}
button, .breadcrumb { /* consistent focus color */
    &:focus-visible {
        outline: 3px solid var(--focus-color);
    }
}
a>button { width: 100%; height: 100%;  } /* link buttons, fill parent space */
input, select, ul a {
    &:focus-visible {
        border-radius: .3em;
        border-color: transparent;
        outline: 2px solid var(--focus-color);
    }
}

.icon-button {
    padding: .1em;
    font-size: 104%; height: 1.8em; // same height as text buttons (30px)
    width: 2em;
}

.error-msg {
    background-color: #faa;
    color: #833;
    padding: .5em 1em;
}
.hide-back {
    background-color: var(--bg);
}
header {
    @extend .hide-back;
    position: sticky;
    top: 0;
    padding: .2em .1em;
    z-index: 3; // necessary to not be covered by checkboxes
}

kbd {
    background-color: #eee;
    border-radius: 3px;
    border: 1px solid #b4b4b4;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 2px 0 0 rgba(255, 255, 255, 0.7) inset;
    color: #333;
    display: inline-block;
    font-size: 0.85em;
    font-weight: 700;
    line-height: 1;
    padding: 2px 4px;
    white-space: nowrap;
    margin-right: .5em;
}

.before-sliding {
    width: 0 !important;
    flex: 0 !important;
    margin: 0 !important;
    height: 0 !important;
    padding: 0 !important;
    overflow: hidden !important;
    transition: flex .5s;
}
.show-sliding {
    transition: flex .5s;
    overflow: clip;
    flex: 1;
    white-space: nowrap;
}

.ani-working { animation:1s blink infinite }

@keyframes blink {
    0% {opacity: 1}
    50% {opacity: 0.2}
}
@keyframes spin {
    100% { transform: rotate(360deg); }
}
@keyframes fade-in {
    0% {opacity: 0}
    100% {opacity: 1}
}

.spinner, .icon.spinner:before {
    animation: 1.5s spin infinite linear;
    display: inline-flex; justify-content: center; align-items: center; width: min-content;
}

.breadcrumb {
    padding: 0.1em 0.6em 0.2em;
    line-height: 1.8em;
    border-radius: 0.7em;
    background-color: var(--button-bg);
    color: var(--button-text);

    border-top: 1px solid #666;
    margin-right: -0.1em;
    &:nth-child(-n+3) .icon {
        padding: 0 0.2em;
    }
}
#folder-stats, #filter-bar>span {
    font-size: 90%;
}
#folder-stats {
    margin-left: .5em;
    line-height: 2em;
    float: right;
    .icon {
        margin-right: .3em;
    }
}
#filter {
    flex: 1;
    box-sizing: border-box;
}
#filter-bar {
    display: flex;
    align-items: center;
    gap: .8em;
    margin: 0.2em 0 0;
    padding: 2px 0 1px 3px;
    height: 1.8em; /* necessary to animate displaying */
    input[type=checkbox] { margin-top: .3em; }
    span:empty { display:none } /* avoid flex-gap */
}
/* ... */

